tests/ui/issues/issue-22638.stderr
error: reached the recursion limit while instantiating `A::matches::<{closure@$DIR/issue-22638.rs:42:23: 42:25}>`
  --> $DIR/issue-22638.rs:54:9
   |
LL |         a.matches(f)
   |         ^^^^^^^^^^^^
   |
note: `A::matches` defined here
  --> $DIR/issue-22638.rs:13:5
   |
LL |     pub fn matches<F: Fn()>(&self, f: &F) {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

